--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
           <li class="nav-list__item"><a href="#" class="nav-list__link">Контакты</a></li>
         </ul>
       </nav>
+      <button type="button" class="mobile-menu-btn" data-menu-open>
+        <svg class="mobile-menu-btn__icon" width="40" height="40">
+          <use href="./images/icons.svg#burger-menu-icon"></use>
+        </svg>
+      </button>
       <ul class="contacts">
-        <li class="nav-list__item"><a href="mailto:info@devstudio.com" class="contact-link"><svg
+        <li class="nav-list__item mail-item"><a href="mailto:info@devstudio.com" class="contact-link"><svg
               class="contact-icon mail">
               <use href="./images/icons.svg#icon-email">
               </use>
@@ -38,6 +43,34 @@
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a></li>
       </ul>
+    </div>
+
+    <div class="mobile-menu" data-menu>
+      <div class="container mobile-menu__container">
+        <button type="button" class="mobile-menu__close-btn" data-menu-close>
+          <svg class="mobile-menu__close-icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="mobile-nav-list">
+          <li class="mobile-nav-list__item"><a href="./index.html"
+              class="mobile-nav-list__link mobile-curent">Студия</a></li>
+          <li class="mobile-nav-list__item"><a href="./portfolio.html" class="mobile-nav-list__link">Портфолио</a></li>
+          <li class="mobile-nav-list__item"><a href="#" class="mobile-nav-list__link">Контакты</a></li>
+        </ul>
+        <ul class="mobile-contacts-list">
+          <li class="mobile-contacts-list__item"><a href="tel:+380961111111" class="mobile-phone">+38 096 111 11 11</a>
+          </li>
+          <li class="mobile-contacts-list__item"><a href="mailto:info@devstudio.com"
+              class="mobile-email">info@devstudio.com</a></li>
+        </ul>
+        <ul class="mobile-social-list">
+          <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Instagram</a></li>
+          <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Twitter</a></li>
+          <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Facebook</a></li>
+          <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">LinkedIn</a></li>
+        </ul>
+      </div>
     </div>
   </header>
   <main>
@@ -50,7 +83,7 @@
         <button type="button" class="hero-btn modal-btn" data-modal-open>Заказать услугу</button>
       </div>
     </section>
-    <section class="features section">
+    <!-- <section class="features section">
       <div class="container">
         <h2 class="visually-hidden">Our features</h2>
         <ul class="features-list">
@@ -247,8 +280,8 @@
         </ul>
       </div>
     </section>
-  </main>
-  <footer class="footer">
+  </main> -->
+    <!-- <footer class="footer">
     <div class="container footer-container">
       <div class="footer-adress">
         <a href="./index.html" class="footer-logo-primary logo-primary">Web<span
@@ -312,59 +345,60 @@
         </form>
       </div>
     </div>
-  </footer>
-  <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-      <button type="button" class="modal-close-btn" data-modal-close>
-        <svg class="madal-close-icon" width="18" height="18">
-          <use href="./images/icons.svg#icon-close"></use>
-        </svg>
-      </button>
-      <form class="contact-form">
-        <b class="contact-form-title">Оставьте свои данные, мы вам перезвоним</b>
-        <label class="contact-form-field">
-          <span class="contact-form-name">Имя</span>
-          <span class="contact-form-input-wrapper">
-            <input class="contact-form-input" name="user_name" type="text" required>
-            <svg class="contact-form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-person-form"></use>
-            </svg>
-          </span>
-        </label>
-        <label class="contact-form-field">
-          <span class="contact-form-name">Телефон</span>
-          <span class="contact-form-input-wrapper">
-            <input class="contact-form-input" name="user_phone" type="tel" required>
-            <svg class="contact-form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-phone-form"></use>
-            </svg>
-          </span>
-        </label>
-        <label class="contact-form-field">
-          <span class="contact-form-name">Почта</span>
-          <span class="contact-form-input-wrapper">
-            <input class="contact-form-input" name="user_mail" type="email" required>
-            <svg class="contact-form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-email-form"></use>
-            </svg>
-          </span>
-        </label>
-        <label class="contact-form-field message">
-          <span class="contact-form-name">Комментарий</span>
-          <textarea class="contact-form-message" name="user-message" placeholder="Введите текст" class=""></textarea>
-        </label>
-        <div class="contact-form-checkbox-wrapper">
-          <input class="contact-form-checkbox visually-hidden" name="accept-policy" type="checkbox" id="policy-checkbox"
-            required>
-          <label class="contact-form-checkbox-desc" for="policy-checkbox">Соглашаюсь с рассылкой и принимаю&nbsp;
-            <a class="contact-form-link" href="">Условия договора</a>
+  </footer> -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="madal-close-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <form class="contact-form">
+          <b class="contact-form-title">Оставьте свои данные, мы вам перезвоним</b>
+          <label class="contact-form-field">
+            <span class="contact-form-name">Имя</span>
+            <span class="contact-form-input-wrapper">
+              <input class="contact-form-input" name="user_name" type="text" required>
+              <svg class="contact-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-form"></use>
+              </svg>
+            </span>
           </label>
-        </div>
-        <button type="submit" class="contact-form-submit-btn modal-btn">Отправить</button>
-      </form>
+          <label class="contact-form-field">
+            <span class="contact-form-name">Телефон</span>
+            <span class="contact-form-input-wrapper">
+              <input class="contact-form-input" name="user_phone" type="tel" required>
+              <svg class="contact-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-form"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="contact-form-field">
+            <span class="contact-form-name">Почта</span>
+            <span class="contact-form-input-wrapper">
+              <input class="contact-form-input" name="user_mail" type="email" required>
+              <svg class="contact-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-form"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="contact-form-field message">
+            <span class="contact-form-name">Комментарий</span>
+            <textarea class="contact-form-message" name="user-message" placeholder="Введите текст" class=""></textarea>
+          </label>
+          <div class="contact-form-checkbox-wrapper">
+            <input class="contact-form-checkbox visually-hidden" name="accept-policy" type="checkbox"
+              id="policy-checkbox" required>
+            <label class="contact-form-checkbox-desc" for="policy-checkbox">Соглашаюсь с рассылкой и принимаю&nbsp;
+              <a class="contact-form-link" href="">Условия договора</a>
+            </label>
+          </div>
+          <button type="submit" class="contact-form-submit-btn modal-btn">Отправить</button>
+        </form>
+      </div>
     </div>
-  </div>
-  <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
